--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -13,6 +13,7 @@ $secundario:#455A64;
 $negro:#000000;
 $blanco:#FFFFFF;
 $grisClaro:#eceeef;
+$formulario:#f0ae12;
 
 //Unidades
 $separacion:5rem;
