--- a/src/scss/modules/registro/registro.scss
+++ b/src/scss/modules/registro/registro.scss
@@ -35,12 +35,12 @@
             background-color: v.$formulario;
             display:grid;
             grid-template-columns: 1fr;
-            width:100%;
+            width:90%;
             margin: 0 auto;
             border-radius: 3rem;
             
             @include m.tablet { 
-                width:90%;
+                width:70%;
                 margin: 0 auto;
                 
             }
@@ -48,8 +48,15 @@
 
             fieldset{
                 border: 5px solid v.$colorHeader;
-                margin: 3rem;
-                padding: 3rem;
+                margin:2rem;
+                padding: 2rem;
+                
+
+                @include m.tablet { 
+                    margin: 3rem;
+                    padding: 3rem;
+                }
+              
                 display: flex;
                 flex-direction: column;
                 align-items: space-between ;
