--- a/src/scss/modules/registro/registro.scss
+++ b/src/scss/modules/registro/registro.scss
@@ -2,8 +2,14 @@
 @use 'base/variables' as v;
 
 .registro{
-    padding-top: 3rem;
+
     background-color: v.$fondo;
+    padding-top: 2rem;
+@include m.tablet { 
+    padding-top: 3rem;
+}
+
+  
 
  &__grid{
     display: flex;
@@ -44,12 +50,15 @@
                 margin: 0 auto;
                 
             }
-
-
             fieldset{
                 border: 5px solid v.$colorHeader;
                 margin:2rem;
                 padding: 2rem;
+                display: flex;
+                flex-direction: column;
+                align-items: space-between;
+                gap:2rem;
+
                 
 
                 @include m.tablet { 
@@ -57,10 +66,7 @@
                     padding: 3rem;
                 }
               
-                display: flex;
-                flex-direction: column;
-                align-items: space-between ;
-                gap:2rem;
+             
                 legend{
                     background-color: v.$colorHeader;
                     font-size: 1.5rem;
