--- a/src/scss/modules/registro/registro.scss
+++ b/src/scss/modules/registro/registro.scss
@@ -96,6 +96,16 @@
         gap:1rem;
         font-weight: bold;
         font-size: 2rem;
+
+        input{
+            width: 70%;
+           
+        
+            @include m.tablet { 
+                width: 100%;
+            }
+        }
+
     
         
       @include m.tablet {          
