--- a/src/scss/modules/registro/registro.scss
+++ b/src/scss/modules/registro/registro.scss
@@ -41,7 +41,7 @@
             background-color: v.$formulario;
             display:grid;
             grid-template-columns: 1fr;
-            width:90%;
+            width:100%;
             margin: 0 auto;
             border-radius: 3rem;
             
@@ -98,7 +98,7 @@
         font-size: 2rem;
 
         input{
-            width: 70%;
+            width: 100%;
            
         
             @include m.tablet { 
@@ -127,6 +127,7 @@
         margin: 0 auto;
         margin-top: 5rem;
         margin-bottom: 5rem;
+        color:v.$negro;
     }
 }   
 
